# AM-NASA-v6

./: .gitattributes  .gitignore  README.md  astro_timeframes.py  pyproject.toml  requirements.txt  run_all.bat
app/: main.py  user_api.py
data/amjd/: AMJD_EVENT_INDEX.csv  AMJD_MASTER_GSFC_BATCH6.csv  AMJD_PORTFOLIO_SUMMARY.csv  AMJD_RAW_DATA.csv  AMJD_RAW_DATA_MASTERLIKE.csv  AMJD_TOPO_30_CITIES.csv  AMJD_TOPO_EVENTS.csv  AMJD_TOPO_TEMPLATE_SAMPLE.csv  AMJD_TOPO_VISIBILITY_LUNAR.csv  AMJD_TOPO_VISIBILITY_SOLAR.csv  AMJD_VALIDACJA_GSFC_v1.csv  AMJD_VALIDACJA_MASTER_AM.csv  AMJD_VALIDACJA_MASTER_AM_validated.csv  AMJD_VOLCANO_PROCESSED.csv  AMJD_VOLCANO_RAW.csv
docs/: AMJD_BIALA_KSIEGA_v1.md  AMJD_ERRATA_I_KANON.md  AMJD_RAPORT_CHRYSTUSOWY.md  AMJD_VALIDACJA_MASTER_AM.md
examples/: demo_console.py  inspect_event_index.py
reports/: epoch_report_test.csv  epoch_report_test.html
scripts/: amjd_eclipse_visibility_grid.py  amjd_event_index.py  amjd_portfolio_summary.py  amjd_raw_to_master_like.py  amjd_validate_master.py  amjd_volcano_process.py
src/am_nasa/: __init__.py  am_core.py  am_logger.py  api.py  astro_sync.py  astro_validate.py  eclipses.py  ephemeris_nasa.py  epoch_report.py  faza_ksiezyca.py  geo_time.py  kalendarze_lunisolarne.py  konwersja_wielosystemowa.py  planetary_positions.py
tests/: conftest.py  test_am_core.py  test_astro_sync.py  test_full_pipeline.py
